syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Append {
  // only one of these fields can be non-null
  repeated string blockrefs = 1;
  map<string, bool> children = 2;
  bool delete = 3;
}

message BranchClock {
  string name = 1;
  uint64 clock = 2;
  repeated BranchClock clock = 3;
}

message Repo {
  string name = 1;
  google.protobuf.Timestamp created = 2;
}

message Branch {
  string id = 1;  // repo name + branch name
  string repo = 2;
  string name = 3;
}

message Diff {
  string id = 1;  // commit_id + path
  string commit_id = 2;
  string path = 3;
  FileType file_type = 4;
  repeated Append appends = 5;
  uint64 size = 6;
}

message Commit {
  string id = 1;
  string repo = 2;
  repeated BranchClock clock = 3;
  google.protobuf.Timestamp started = 4;
  google.protobuf.Timestamp finished = 5;
  repeated string provenance = 6;
}


